# Chisel

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml  config.yml
chisel/: __init__.py  __main__.py  auth.py  cleanup.py  cli.py  models.py  packer.py  scanner.py  unpacker.py  utils.py
chisel/help/: 01-overview.md  02-how-it-works.md  03-pack.md  04-unpack.md  05-preview.md  06-clean.md  06-shortcuts.md  07-clean.md  07-faq.md  08-disclaims.md  08-troubleshooting.md  09-notes.md  10-disclaims.md
chisel/tui/: __init__.py  about.py  app.py  auth_ui.py  clean.py  editor.py  help.py  helpers.py  message.py  pack.py  preview.py  start.py  unpack.py
chisel/tui/css/: about.css  base.css  editor.css  help.css  message.css  pack.css  preview.css  start.css  unpack.css
chisel/unpacker/: __init__.py  helpers.py  validate.py
