[project]
name = "chisel"
version = "0.1.0"
description = "Chisel - Claude Code 历史记录迁移工具"
requires-python = ">=3.10"
dependencies = ["rich>=13.0.0", "textual>=0.80.0"]

[project.scripts]
chisel = "chisel.cli:main"

[tool.setuptools.packages.find]
include = ["chisel", "chisel.*"]

[tool.setuptools.package-data]
chisel = ["help/*.md", "tui/css/*.css"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
